--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- Font Awesome -->
 
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="iphone-img" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="iphone-img" src="iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -119,12 +119,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog use to be so lonely, but with TinDog's help,they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -147,10 +147,10 @@
   <!-- Press -->
 
   <section class="coloured-section" id="press">
-    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="TechCrunch.png" alt="tc-logo">
+    <img class="press-logo" src="tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="mashable.png" alt="mashable-logo">
   </section>
 
   <!-- Pricing -->
